--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
             </a>
         </div>
         <div class="titre">Olivier-Raphael Desrosiers</div>
+        <div class="texte"><a class="selected2" href="https://github.com/OlivierDesrosiers/PFI">https://github.com/OlivierDesrosiers/PFI</a></div>
     </div>
 </body>
 
